# some-serial

./: .gitignore  CLAUDE.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  README_ENHANCED.md  build.rs
.claude/plan/: 中断回调测试.md  中断测试开发.md
examples/: loopback_demo.rs  uart_usage.rs
src/: lib.rs  ns16550.rs  pl011.rs
src/ns16550/: mmio.rs  mod.rs  pio.rs  registers.rs
tests/: test.rs
