[package]
edition = "2024"
name = "some-serial"
version = "0.1.0"

[dependencies]
bitflags = "2.8"
log = "0.4"
tock-registers = "0.10"
mbarrier = "0.1"

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = "0.15"

[target.'cfg(target_os = "none")'.dev-dependencies]
bare-test = "0.6"

[build-dependencies]
bare-test-macros = "0.2"

[[test]]
harness = false
name = "test"
